Opened 10 years ago

Closed 9 years ago

#12361 closed bug (fixed)

[Mail] Alt+a doesn't work in Subject field

Reported by: diver Owned by: jscipione
Priority: normal Milestone: Unscheduled
Component: Applications/Mail Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

hrev49617.

Alt+a doesn't select all in Subject field of Mail app

Change History (2)

comment:1 by jscipione, 10 years ago

Owner: changed from czeidler to jscipione
Status: newin-progress

comment:2 by jscipione, 9 years ago

Resolution: fixed
Status: in-progressclosed

Fixed in hrev49709

Note: See TracTickets for help on using tickets.