Mail: Implement select all hook for subject

This allows the Cmd+A key shortcut to select all text on
the subject control.  You could already Select All from the
View menu but this is more convinient.

Fixes #12361